--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@
         <img src="icons/up.svg" alt="up">
     </a>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
